--- a/Functional_Diversity_Models.Rmd
+++ b/Functional_Diversity_Models.Rmd
@@ -205,7 +205,7 @@ FD_all %>%
   theme_bw() +
   facet_wrap(~FD, scales = "free")
 
-# ggsave("Functional_Diversity_Barchart.png")
+ggsave("Functional_Diversity_Barchart.png", path = "~/github/Tejon_Functional_Traits/Figures")
 
 ```
 
