--- a/heatmaps.Rmd
+++ b/heatmaps.Rmd
@@ -172,7 +172,7 @@ FDiv_plot <- ggcorrplot(diff, hc.order = FALSE, type = "lower", show.diag = TRUE
 FDiv_plot
 ```
 
-## arrange
+## FD arrange
 ```{r}
 
 # ggarrange(FRic_plot, FDis_plot, FDiv_plot, nrow = 3, ncol = 1, widths = 1)
@@ -192,6 +192,169 @@ cowplot::plot_grid(
                    align = "h")
 
 ggsave("FD_results_heatmap.png", path = "~/github/Tejon_Functional_Traits/Figures", width = 5, height = 10)
+
+```
+
+## CWM
+
+```{r}
+
+test <- as.data.frame(pairs(emmeans(LA_CWM, ~ climate * treatment))) %>% 
+  separate(contrast, c("A", "B"), sep = " - ") %>% 
+  select(A, B, estimate, p.value) %>% 
+  mutate(A = str_replace_all(A, "," , "-")) %>% 
+  mutate(B = str_replace_all(B, "," , "-"))
+
+test2 <- test %>%
+  rename(temp = "A") %>%
+  rename(A = "B") %>%
+  rename(B = "temp")
+
+test <- rbind(test, test2) %>%
+  select(A, B, estimate, p.value)
+
+diff <- as.matrix(test %>%
+                    select(A, B, estimate) %>% 
+                    pivot_wider(names_from = B, values_from = estimate) %>% 
+                    replace(is.na(.), 0) %>% 
+                    column_to_rownames("A") %>% 
+                    dplyr::select("Arid-Open", "Intermediate-Open":"Mesic-Total")
+)
+
+max(diff)
+max = 61
+min(diff)
+min = -61
+
+p_val <- as.matrix(test %>%
+                     select(A, B, p.value) %>% 
+                     pivot_wider(names_from = B, values_from = p.value) %>% 
+                     replace(is.na(.), 0) %>% 
+                     column_to_rownames("A"))
+
+ggcorrplot(diff) + 
+  scale_fill_gradient2(limits=c(min, max))
+
+LA_CWM_plot <- ggcorrplot(diff, hc.order = FALSE, type = "lower", show.diag = TRUE,
+                        outline.col = "white",
+                        p.mat = p_val,
+                        ggtheme = ggplot2::theme_gray,
+                        colors = c("#6D9EC1", "white", "#E46726"),
+                        insig = "blank")+
+  scale_fill_gradient2(limits=c(min, max))+
+  ggtitle("FDis")+
+  theme(plot.margin = unit(c(0, 0, 0, 0), "cm"))
+
+LA_CWM_plot
+
+```
+
+## SLA_CWM
+
+```{r}
+test <- as.data.frame(pairs(emmeans(SLA_CWM, ~ climate * treatment))) %>% 
+  separate(contrast, c("A", "B"), sep = " - ") %>% 
+  select(A, B, estimate, p.value) %>% 
+  mutate(A = str_replace_all(A, "," , "-")) %>% 
+  mutate(B = str_replace_all(B, "," , "-"))
+
+test2 <- test %>%
+  rename(temp = "A") %>%
+  rename(A = "B") %>%
+  rename(B = "temp")
+
+test <- rbind(test, test2) %>%
+  select(A, B, estimate, p.value)
+
+diff <- as.matrix(test %>%
+                    select(A, B, estimate) %>% 
+                    pivot_wider(names_from = B, values_from = estimate) %>% 
+                    replace(is.na(.), 0) %>% 
+                    column_to_rownames("A") %>% 
+                    dplyr::select("Arid-Open", "Intermediate-Open":"Mesic-Total")
+)
+
+max(diff)
+max = 3
+min(diff)
+min = -3
+
+p_val <- as.matrix(test %>%
+                     select(A, B, p.value) %>% 
+                     pivot_wider(names_from = B, values_from = p.value) %>% 
+                     replace(is.na(.), 0) %>% 
+                     column_to_rownames("A"))
+
+ggcorrplot(diff) + 
+  scale_fill_gradient2(limits=c(min, max))
+
+SLA_CWM_plot <- ggcorrplot(diff, hc.order = FALSE, type = "lower", show.diag = TRUE,
+                        outline.col = "white",
+                        p.mat = p_val,
+                        ggtheme = ggplot2::theme_gray,
+                        colors = c("#6D9EC1", "white", "#E46726"),
+                        insig = "blank")+
+  scale_fill_gradient2(limits=c(min, max))+
+  ggtitle("FDis")+
+  theme(plot.margin = unit(c(0, 0, 0, 0), "cm"))
+
+SLA_CWM_plot
+
+```
+
+
+## LDMC_CWM
+
+```{r}
+
+test <- as.data.frame(pairs(emmeans(LDMC_CWM, ~ climate * treatment))) %>% 
+  separate(contrast, c("A", "B"), sep = " - ") %>% 
+  select(A, B, estimate, p.value) %>% 
+  mutate(A = str_replace_all(A, "," , "-")) %>% 
+  mutate(B = str_replace_all(B, "," , "-"))
+
+test2 <- test %>%
+  rename(temp = "A") %>%
+  rename(A = "B") %>%
+  rename(B = "temp")
+
+test <- rbind(test, test2) %>%
+  select(A, B, estimate, p.value)
+
+diff <- as.matrix(test %>%
+                    select(A, B, estimate) %>% 
+                    pivot_wider(names_from = B, values_from = estimate) %>% 
+                    replace(is.na(.), 0) %>% 
+                    column_to_rownames("A") %>% 
+                    dplyr::select("Arid-Open", "Intermediate-Open":"Mesic-Total")
+)
+
+max(diff)
+max = 20
+min(diff)
+min = -28
+
+p_val <- as.matrix(test %>%
+                     select(A, B, p.value) %>% 
+                     pivot_wider(names_from = B, values_from = p.value) %>% 
+                     replace(is.na(.), 0) %>% 
+                     column_to_rownames("A"))
+
+ggcorrplot(diff) + 
+  scale_fill_gradient2(limits=c(min, max))
+
+LDMC_CWM_plot <- ggcorrplot(diff, hc.order = FALSE, type = "lower", show.diag = TRUE,
+                        outline.col = "white",
+                        p.mat = p_val,
+                        ggtheme = ggplot2::theme_gray,
+                        colors = c("#6D9EC1", "white", "#E46726"),
+                        insig = "blank")+
+  scale_fill_gradient2(limits=c(min, max))+
+  ggtitle("FDis")+
+  theme(plot.margin = unit(c(0, 0, 0, 0), "cm"))
+
+LDMC_CWM_plot
+
 
 ```
 
