Saving CWM best-fit model gt table

--- a/CWM_Models.Rmd
+++ b/CWM_Models.Rmd
@@ -413,6 +413,10 @@ pretty_table <- dredge_table %>%
 
 pretty_table
 
+class(pretty_table)
+
+gtsave(data = pretty_table, filename = "CWM_AIC_table.png", path = "~/github/Tejon_Functional_Traits/Figures")
+
 ```
 
 
