--- a/CWM_Models.Rmd
+++ b/CWM_Models.Rmd
@@ -411,9 +411,7 @@ pretty_table <- dredge_table %>%
     source_note = "+ indicates selection of fixed effect term for best-fit model"
   )
 
-pretty_table
-
-class(pretty_table)
+# pretty_table
 
 gtsave(data = pretty_table, filename = "CWM_AIC_table.png", path = "~/github/Tejon_Functional_Traits/Figures")
 
