--- a/CWM_Models.Rmd
+++ b/CWM_Models.Rmd
@@ -19,6 +19,8 @@ library(emmeans) #post-hoc analyses
 # library(performance) #for R2 values
 library(gt)
 library(tibble)
+library(lsmeans)
+library(gridExtra)
 
 other_traits <- read_csv("Datasheets/seed_mass_leaf_N.csv")
 
@@ -139,17 +141,76 @@ emmeans(LA_CWM, pairwise ~ treatment)
 emmeans(LA_CWM, pairwise ~ climate | treatment)
 emmeans(LA_CWM, pairwise ~ treatment | climate)
 
+# visualization
 
-install.packages("lsmeans")
-library(lsmeans)
+test <- emmeans(LA_CWM, ~ climate | treatment)
+pwpp(test) # difficult to interpret
 
-?lsmeans()
+plot(emmeans(LA_CWM, ~ climate * treatment))
 
-grid <- ref.grid(LA_CWM)
-plot(lsmeans(LA_CWM, ~ climate + treatment))
+plot(emmeans(LA_CWM, ~ climate | treatment), 
+     type = "response", 
+     comparisons = TRUE, # If arrows overlap, they are not statistically significant
+     colors = c("black", "black", "blue", "black")) + # color names for estimates, CIs, PIs, and comparison arrows, respectively
+  # this is a ggplot so you can customize as normal
+  theme_bw() +   
+  labs(x = "Estimated marginal mean (LA CWM)", y = "Climate")
+  
+# pair-wise comparisons
+plot(pairs(emmeans(LA_CWM, ~ climate | treatment)), comparisons = TRUE)
 
+# compact letter displays
+# multcomp::cld(pairs(emmeans(LA_CWM, ~ climate | treatment)))
+
+# test <- emmeans(LA_CWM, pairwise ~ climate | treatment)
+
+data <- as.data.frame(test$contrasts) %>% 
+  mutate(upper_limit = estimate +  SE) %>% 
+  mutate(lower_limit = estimate -  SE)
+
+# emmeans::contrast(test)
+
+# test <- as.data.frame(pairs(emmeans(FRic, ~ climate * treatment))) %>% 
+#   separate(contrast, c("A", "B"), sep = " - ") %>%
+#   # select(A, B, estimate, p.value) %>% 
+#   mutate(A = str_replace_all(A, "," , "-")) %>% 
+#   mutate(B = str_replace_all(B, "," , "-")) %>% 
+#   mutate(upper_limit = estimate +  SE) %>% 
+#   mutate(lower_limit = estimate -  SE)
+
+ggplot(data, aes(x = contrast, y = estimate)) +
+  geom_boxplot() +
+  facet_wrap(data$treatment) +
+  # geom_ribbon(aes(ymin = data$lower_limit, ymax = data$upper_limit), linetype=2, alpha=0.1)
+  geom_errorbar(aes(ymin = data$lower_limit, ymax = data$upper_limit))
+  
 
 ```
+
+```{r}
+# double-checking against anova results
+LA_aov <- aov(data = cwm_traits_adj, weighted_la ~ climate * treatment)
+
+dredge(LA_aov)
+simulateResiduals(LA_aov, plot = T)
+shapiro.test(residuals(LA_aov))
+
+summary(LA_aov)
+tukey_LA <- TukeyHSD(LA_aov)
+TukeyHSD(LA_aov)
+
+# making a plot
+
+plot(tukey_LA, ~ climate | treatment)
+
+climate <- as.data.frame(tukey_LA$climate) %>% 
+  rownames_to_column()
+
+ggplot(climate, aes(x = rowname, y = diff)) + 
+  geom_boxplot()
+
+```
+
 
 #### b. SLA CWM
 
@@ -417,6 +478,59 @@ gtsave(data = pretty_table, filename = "CWM_AIC_table.png", path = "~/github/Tej
 
 ```
 
+#### g. EMM Graphs
+
+```{r}
+# making a function
+emm_plot <- function(model, Climate = TRUE, Treatment = TRUE) {
+  if (Climate == TRUE && Treatment == TRUE) return({
+    plot(emmeans(model, ~ climate | treatment), CIs = FALSE, type = "response", comparisons = TRUE, colors = c("black", "black", "blue", "black")) +
+      theme_bw() +
+      labs(x = "Estimated marginal mean", y = "Climate")
+    })
+  if (Climate == TRUE && Treatment == FALSE) return({
+    plot(emmeans(LA_CWM, ~ climate), type = "response", comparisons = TRUE, colors = c("black", "black", "blue", "black")) + 
+      theme_bw() +
+      labs(x = "Estimated marginal mean", y = "Climate")
+    })
+  if (Climate == FALSE && Treatment == TRUE) return({
+    plot(emmeans(LA_CWM, ~ treatment), type = "response", comparisons = TRUE, colors = c("black", "black", "blue", "black")) + 
+      theme_bw() +
+      labs(x = "Estimated marginal mean", y = "Treatment")
+    })
+  if (Climate == FALSE && Treatment == FALSE) return({
+    print("no inputs")
+    })
+}
+
+# Leaf Area
+plot1 <- emm_plot(model = LA_CWM) +
+  labs(title = "Leaf Area CWM") +
+  scale_color_manual(values=cols)
+plot1
+
+# SLA
+plot2 <- emm_plot(model = SLA_CWM) +
+  labs(title = "Specific Leaf Area CWM")
+
+# LDMC
+plot3 <- emm_plot(model = LDMC_CWM) +
+  labs(title = "Leaf Dry Matter Content CWM")
+
+# Seed Mass
+plot4 <- emm_plot(model = log_seed_mass) +
+  labs(title = "Seed Mass (log) CWM")
+
+# LNC
+plot5 <- emm_plot(model = log_n_CWM) +
+  labs(title = "Leaf Nitrogen Content (log) CWM")
+
+CWM_emmeans_all <- grid.arrange(plot1, plot2, plot3, plot4, plot5, ncol = 2)
+
+ggsave("CWM_emmeans.png", plot = CWM_emmeans_all, path = "~/github/Tejon_Functional_Traits/Figures", height = 10, width = 10)
+
+```
+
 
 ### Functional Groups
 
@@ -513,6 +627,7 @@ shapiro.test(residuals(funct_la)) #residuals are normal
 
 emmeans(funct_la, pairwise ~ climate | functional_group)
 emmeans(funct_la, pairwise ~ treatment | functional_group)
+
 LA_funct_sig_pairs <- as.data.frame(pairs(emmeans(funct_la, ~ climate * treatment * functional_group))) %>% 
   separate(contrast, c("A", "B"), sep = " - ") %>% 
   separate(A, c("A_climate", "A_treatment", "A_functional_group"), sep = ",") %>% 
@@ -521,6 +636,7 @@ LA_funct_sig_pairs <- as.data.frame(pairs(emmeans(funct_la, ~ climate * treatmen
           (A_climate == B_climate & A_treatment == B_treatment) | 
            (A_treatment == B_treatment & A_functional_group == B_functional_group))
   
+?emmeans()
   
 LA_funct_sig_pairs
 
